--- a/stage-2/src/styles/landing-page.css
+++ b/stage-2/src/styles/landing-page.css
@@ -1,37 +1,46 @@
+#landing-page-container {}
+
 #hero-message-container {
-    border: 1px solid red;
-    padding: 0% 4%;
-
-
+    height: 40rem;
+    color: white;
+    margin: 0% 4%;
 }
 
 #landingMovieThumbnail {
+    position: absolute;
     width: 100%;
     height: 40rem;
+    z-index: -1;
 }
 
-#hero-message-container__top{
-    width: 100%;
+#hero-message-container__top {
     display: flex;
     align-items: center;
     justify-content: space-between;
-
+    margin: 0% 4%;
 }
 
 #far-right {
     display: flex;
     align-items: center;
-    width: 5rem;
+    width: 8rem;
     justify-content: space-between;
     cursor: pointer;
-     
 }
 
-
 #far-right p {
-    background: linear-gradient(to bottom, rgb(153, 149, 149), #FFFFFFFF);
+    /* background: linear-gradient(to bottom, rgb(153, 149, 149), #ffffffff); */
     color: white;
+    font-weight: bolder;
+}
 
+#menu-bar-icon {
+    background-color: #b91c1c;
+    width: 1.2rem;
+    height: 1rem;
+    border-radius: 50%;
+    padding: 0.4rem;
+    color: white;
 }
 
 #logo-app-name-container {
@@ -39,25 +48,23 @@
     align-items: center;
     width: 5rem;
     justify-content: space-between;
-
 }
 
-#logo{
-    color: #B91C1C;
+#logo {
+    color: #b91c1c;
     margin-right: 1rem;
-
 }
 
 #app-name {
     width: fit-content;
-    background: linear-gradient(to bottom, rgb(153, 149, 149), #FFFFFFFF);
+    /* background: linear-gradient(to bottom, rgb(153, 149, 149), #ffffffff); */
     color: white;
+    font-weight: bolder;
 }
 
 #hero-message-container__middle {
     max-width: 30%;
-    padding : 4rem 0rem;
-
+    padding: 4rem 0rem;
 }
 
 .ratings-outer-container {
@@ -65,18 +72,12 @@
     align-items: center;
     justify-content: space-between;
     width: 100%;
-
-
-
 }
-
-
 
 .ratings-container {
     display: flex;
     align-items: center;
     width: 16rem;
-
 }
 
 .ratings-icon {
@@ -96,40 +97,33 @@
     align-items: center;
     width: 50%;
     justify-content: space-evenly;
-    background-color: #B91C1C;
+    background-color: #b91c1c;
     color: white;
-
-
+    cursor: pointer;
+    border-radius: 1rem;
+    font-weight: bolder;
 }
-
 
 #bottom-container {
     text-align: center;
     margin: 8% 30%;
-
 }
 
 #socials-container {
-
     display: flex;
     align-self: center;
     justify-content: space-around;
     cursor: pointer;
-    
 }
-
 
 #socials-container a {
     cursor: pointer;
-    color: gray;
+    color: #111827;
 }
 
 #quick-links-container {
     display: flex;
     justify-content: space-around;
-    
-
-
 }
 
 #quick-links-container a {
@@ -138,11 +132,7 @@
     cursor: pointer;
 }
 
-
-
 #footer {
     text-align: center;
     color: gray;
 }
-
-
