--- a/stage-2/src/styles/movie-card-component.css
+++ b/stage-2/src/styles/movie-card-component.css
@@ -1,36 +1,54 @@
 [data-testid="movie-card"] {
-    border: 1px solid black;
-    width: 16.3rem;
-    display: flex;
-    flex-direction: column;
-
-    
-
+  width: 16.3rem;
+  display: flex;
+  flex-direction: column;
+  position: relative;
 }
 
 [data-testid="movie-poster"] {
-    width: 16.3rem;
-    height: 50%;
-    background-color: yellow;
-
+  width: 16.3rem;
+  height: 50%;
+  background-color: yellow;
 }
 
 [data-testid="movie-title"] {
-    margin: 0%;
-
+  margin: 0%;
 }
 
 [data-testid="movie-release-date"] {
-    margin: 0%;
-
+  margin: 0%;
 }
 
-#rating-container {
-    display: flex;
-    justify-content: space-between;
-    margin: 0%;
+#favorite-icon {
+  z-index: 1;
+  position: absolute;
+  top: 0;
+  right: 0;
+  background-color: #a7c0bf;
+  padding: 0.5rem;
+  border-radius: 50%;
+  width: 1rem;
+  height: 1.5rem;
+  margin: 0.4rem;
+}
+
+#rating-container-outer {
+  display: flex;
+  width: 100%;
+  align-items: center;
+  justify-content: space-between;
+}
+
+#rating-container-c {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.ratings-icon-c > p {
+  margin-left: 2rem;
 }
 
 #genres-container {
-    margin: 0%;
+  margin: 0%;
 }
