--- a/stage-2/src/styles/search-bar-components.css
+++ b/stage-2/src/styles/search-bar-components.css
@@ -1,3 +1,29 @@
 .search-bar {
     display: flex;
+    align-items: center;
+    padding: 0.5rem 2rem;
+    border: 0.2rem solid white;
+    border-radius: 1rem;
+    font-weight: bolder;
+}
+
+.search-bar input {
+    font-weight: bolder;
+    height: 2rem;
+    width: 32vw;
+    border: none;
+    background-color: transparent;
+    color: white;
+}
+
+.search-bar input::placeholder {
+    color: white;
+    font-weight: bold;
+    font-size: large;
+}
+
+#search-icon {
+    z-index: -1;
+    margin-left: 1%;
+    color: white;
 }
